--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "module": "src/index.ts",
   "type": "module",
   "devDependencies": {
+    "@eslint/js": "^9.4.0",
     "@types/bun": "latest",
-    "eslint": "^9.4.0"
+    "@types/libsodium-wrappers-sumo": "^0.7.8",
+    "eslint": "9.x",
+    "globals": "^15.4.0",
+    "typescript-eslint": "^7.12.0"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
@@ -13,5 +17,9 @@
   "files": [
     "src/**/*",
     "README.md"
-  ]
+  ],
+  "dependencies": {
+    "crc": "^4.3.2",
+    "libsodium-wrappers-sumo": "^0.7.13"
+  }
 }
