--- a/package.json
+++ b/package.json
@@ -3,23 +3,40 @@
   "version": "0.0.1",
   "module": "src/index.ts",
   "type": "module",
+  "scripts": {
+    "protobuf": "pbjs --target static-module --wrap es6 --out src/signal-service/compiled.js src/signal-service/signalservice.proto && pbts --out src/signal-service/compiled.d.ts src/signal-service/compiled.js --force-long"
+  },
   "devDependencies": {
     "@eslint/js": "^9.4.0",
     "@types/bun": "latest",
+    "@types/bytebuffer": "^5.0.49",
     "@types/libsodium-wrappers-sumo": "^0.7.8",
+    "@types/lodash": "^4.17.4",
+    "@types/uuid": "^9.0.8",
     "eslint": "9.x",
     "globals": "^15.4.0",
+    "protobufjs": "^7.3.0",
+    "protobufjs-cli": "^1.1.2",
     "typescript-eslint": "^7.12.0"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "files": [
-    "src/**/*",
+    "src/**/*.ts",
+    "src/**/*.js",
+    "src/**/*.d.ts",
+    "src/**/*.json",
     "README.md"
   ],
   "dependencies": {
+    "bytebuffer": "^5.0.1",
     "crc": "^4.3.2",
-    "libsodium-wrappers-sumo": "^0.7.13"
-  }
+    "libsodium-wrappers-sumo": "^0.7.13",
+    "lodash": "^4.17.21",
+    "uuid": "^9.0.1"
+  },
+  "trustedDependencies": [
+    "protobufjs"
+  ]
 }
