--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "libsodium-wrappers-sumo": "^0.7.13",
     "lodash": "^4.17.21",
     "p-retry": "^6.2.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zod": "^3.23.8"
   },
   "trustedDependencies": [
     "protobufjs"
