Update alias to avoid conflicts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "editor.tabCompletion": "on",
   "path-intellisense.mappings": {
-    "@/*": "${workspaceFolder}/src/*"
+    "@session-oxen/*": "${workspaceFolder}/src/*"
   },
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit"
