--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
     "noPropertyAccessFromIndexSignature": false,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"],
+      "@session-oxen/*": ["src/*"],
     }
   }
 }
