--- a/tsconfig.publish.json
+++ b/tsconfig.publish.json
@@ -24,7 +24,7 @@
     "noPropertyAccessFromIndexSignature": false,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"],
+      "@session-oxen/*": ["src/*"],
     }
   },
   "include": ["src/**/*.ts"]
