--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@session.js/client",
-  "version": "0.0.52",
+  "version": "0.0.53",
   "type": "module",
   "homepage": "https://github.com/sessionjs/client",
   "repository": {
@@ -20,7 +20,7 @@
     ".": "./dist/index.js",
     "./polling": "./dist/polling/index.js",
     "./storage": "./dist/storage/index.js",
-    "./types": "./dist/types/index.js"
+    "./schema": "./dist/messages/schema/index.js"
   },
   "devDependencies": {
     "@eslint/js": "^9.4.0",
